# glyph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_SUMMARY.md  LICENSE  README.md  build.rs  dist-workspace.toml  release.toml  rustfmt.toml
.github/workflows/: bitvm-tests.yml  ci.yml  release.yml  runtime.yml
core/: build.zig  build.zig.zon  test
core/.zig-cache/o/1edcf96d60446175564e07efeb0f0aca/: zig
core/.zig-cache/o/6f1b4293ef2c126b9f81ad753043463b/: zig
core/.zig-cache/o/ee3be1c70760cace045f2a59699bcba1/: test
core/scripts/: disasm
core/src/: expr.zig  root.zig
crates/: Cargo.toml  README.md
crates/bitvm-common/: Cargo.toml  README.md
crates/bitvm-common/src/: emulator.rs  instruction.rs  lib.rs  memory.rs  trace.rs  verification.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: integration_tests.rs
crates/glyph/: Cargo.toml  build.rs
crates/risc-v-gen/: Cargo.toml  README.md
crates/risc-v-gen/src/: elf.rs  emulator.rs  lib.rs
crates/risc-v-gen/tests/: elf_tests.rs
crates/uplc-serializer/: Cargo.toml  README.md
crates/uplc-serializer/examples/: complex_serialization.rs  simple_serialization.rs
crates/uplc-serializer/src/: constants.rs  lib.rs  memory_layout.rs  serializer.rs
crates/uplc-serializer/tests/: semantic_tests.rs
crates/uplc-to-llvm/: Cargo.toml  build.rs
crates/uplc-to-llvm/src/: lib.rs
crates/uplc-to-llvm/src/runtime/: link.ld  uplc_runtime.c
crates/uplc-to-riscv/: Cargo.toml  README.md
crates/uplc-to-riscv/examples/: bitvm_verification_example.rs  simple.uplc
crates/uplc-to-riscv/src/: bitvm_emulator.rs  bitvm_verification.rs  cek.rs  ir.rs  lib.rs  optimize.rs  trace_generator.rs
crates/uplc-to-riscv/tests/: bitvm_compatibility_tests.rs  compliance_tests.rs  conformance_tests.rs  end_to_end_tests.rs  integration_tests.rs
example/: aiken.toml  plutus.json  redeemer.uplc
example/bitvmx_artifacts/: instruction_mapping.txt  manifest.json
example/validators/: example.ak
examples/: bitvm_verification_example.rs  factorial.uplc  run_examples.sh
linker/: link.ld
runtime/: Dockerfile  build.zig  build.zig.zon
runtime/.zig-global/b/2787dea0087f88672aa6dc6b4869e3f1/: builtin.zig
runtime/.zig-global/b/8a9f031e2ef66c1ec8ed877a699ac060/: builtin.zig
runtime/.zig-global/b/c44b0b757b9b42d9a844ae8294564fc0/: builtin.zig
runtime/scripts/: disasm
runtime/src/: Heap.zig  cek.zig  expr.zig  memset.zig  root.zig  runtimeFunction.zig  runtimeValidator.zig  utils.zig  value.zig
runtime/src/builtins/: bool.zig  bytestring.zig  crypto.zig  data.zig  integer.zig  list.zig  pair.zig  string.zig
src/: bitvmx.rs  cek.rs  emulator.rs  lib.rs  serializer.rs
src/serializer/: constants.rs
tests/: bitvmx_integration.rs  conformance.rs
tests/fixtures/: mul.elf  simple.elf
tests/semantics/chooseDataConstr/: chooseDataConstr.uplc.expected
tests/semantics/unBData/unBData-01/: unBData-01.uplc
