[workspace]
resolver = "2"
members = [
    "crates/uplc-to-riscv",
    "crates/risc-v-gen",
    "crates/cli",
    "crates/uplc-to-llvm",
    "crates/uplc-serializer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output/riscy"
authors = ["IOG"]

[workspace.dependencies]
log = "0.4"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
