[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/glyph"
authors = ["IOG"]

[workspace.dependencies]
log = "0.4"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
