[package]
name = "uplc-to-risc-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the UPLC to RISC-V compiler"
license = "MIT OR Apache-2.0"

[dependencies]
uplc-to-riscv = { path = "../uplc-to-riscv" }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8" 