[package]
name = "glyph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
metadata.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-print = "0.3.7"
hex = "0.4.3"
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.45.1", features = ["full"] }
uplc = "1.1.17"
