[package]
name = "uplc-serializer"
version = "0.1.0"
edition = "2021"
description = "Serializer for UPLC terms to a compact binary format for RISC-V CEK machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output/riscy"
authors = ["IOG"]

[dependencies]
log = "0.4"
thiserror = "1.0"
uplc = { git = "https://github.com/aiken-lang/aiken.git", package = "uplc" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
byteorder = "1.4.3"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.3.0" 