[package]
name = "uplc-serializer"
description = "Serializer for UPLC terms to a compact binary format for RISC-V CEK machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
metadata.workspace = true

[dependencies]
log = "0.4"
thiserror = "1.0"
uplc = { git = "https://github.com/aiken-lang/aiken.git", package = "uplc" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
byteorder = "1.4.3"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.3.0"
