[package]
name = "uplc-to-riscv"
version = "0.1.0"
edition = "2021"
description = "Compiler from Untyped Plutus Core to RISC-V"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/uplc-risc"

[dependencies]
# Core dependencies
log = { workspace = true }
thiserror = { workspace = true }

# Internal dependencies
risc-v-gen = { path = "../risc-v-gen" }

# External dependencies
uplc = { version = "1.0" }
num-bigint = "0.4"
peg = "0.8"
pallas-primitives = { version = "^0.32.0" }

# BitVMX compatibility dependencies
sha2 = "0.10.8"
hex = "0.4.3"
riscv-decode = "0.2.1"
tempfile = "3.8.1"

# BitVMX-CPU dependencies
bitcoin-script-riscv = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "main", package = "bitcoin-script-riscv" }
emulator = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "challenges", package = "emulator" }

# Serialization dependencies for BitVMX integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional features can be added later

[features]
default = []

[dev-dependencies]
tempfile = "3.8.1"

[[example]]
name = "bitvm_verification_example"
path = "examples/bitvm_verification_example.rs"
