[package]
name = "uplc-to-riscv"
version = "0.1.0"
edition = "2021"
description = "Compiler from Untyped Plutus Core to RISC-V"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/uplc-risc"

[dependencies]
# Core dependencies
thiserror = { workspace = true }

# Internal dependencies
risc-v-gen = { path = "../risc-v-gen" }
uplc-serializer = { path = "../uplc-serializer" }

# External dependencies
uplc = { git = "https://github.com/aiken-lang/aiken.git", package = "uplc" }
num-bigint = "0.4"
peg = "0.8"
pallas-primitives = { version = "^0.32.0" }

# BitVMX compatibility dependencies
sha2 = "0.10.8"
hex = "0.4.3"
riscv-decode = "0.2.1"
tempfile = "3.8.1"

# BitVMX-CPU dependencies
# [patch."https://github.com/FairgateLabs/rust-bitcoin-script"]
# bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "main" }

emulator = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "main", package = "emulator" }

# Serialization dependencies for BitVMX integration
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0"
strum = "0.27.1"

# Optional features can be added later

[features]
default = []

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.8.1"
walkdir = "2.5.0"
