[package]
name = "uplc-to-riscv"
description = "Compiler from Untyped Plutus Core to RISC-V"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
metadata.workspace = true

[dependencies]
# Core dependencies
thiserror = { workspace = true }

# Internal dependencies
risc-v-gen = { path = "../risc-v-gen" }
uplc-serializer = { path = "../uplc-serializer" }

# External dependencies
uplc = { git = "https://github.com/aiken-lang/aiken.git", package = "uplc" }
num-bigint = "0.4"
peg = "0.8"
pallas-primitives = { version = "^0.32.0" }

# BitVMX compatibility dependencies
sha2 = "0.10.8"
hex = "0.4.3"
riscv-decode = "0.2.1"
tempfile = "3.8.1"

# BitVMX-CPU dependencies
# [patch."https://github.com/FairgateLabs/rust-bitcoin-script"]
# bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "main" }

emulator = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "main", package = "emulator" }

# Serialization dependencies for BitVMX integration
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0"
strum = "0.27.1"

# Optional features can be added later

[features]
default = []

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.8.1"
walkdir = "2.5.0"
